Fix progressbar margin on mobile devices

--- a/src/components/player/player.styl
+++ b/src/components/player/player.styl
@@ -105,7 +105,7 @@
 		display flex
 		align-items center
 		margin-top 8px
-		margin-left -52px
+		margin-left -56px
 		padding-bottom 8px
 		border-bottom 1px solid $color-border
 
